Desenvolvimento da pagina de portifolio

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <div id="wrapper">
-        <img src="https://avatars2.githubusercontent.com/u/47648859?s=460&u=8e08c1f5d34b0d6dfaf172b15e8b9ff2b168b362&v=4"
+        <img src="https://www.marottayasociados.com/images/team/ac_generico.jpg"
             alt="Eduardo Maia">
         <h1>Eduardo Maia</h1>
         <h2>Engenharia de Software - Universidade de Brasília</h2>
